# libgscgi

./: Makefile  README  README.md  Request.vala  Server.vala  libgscgi-1.0.pc.in  meson.build
debian/: .control.swp  README  README.source  changelog  control  libgscgi1.install  rules
packaging/debian/: changelog  control  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  libgscgi.cron.d.ex  libgscgi.default.ex  libgscgi.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
packaging/debian/libgscgi/DEBIAN/: control  md5sums
packaging/debian/libgscgi/usr/share/doc/libgscgi/: README.Debian  copyright
